--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,20 @@
   "name": "Done-It",
   "short_name": "Done-It",
   "description": "מערכת ניהול אישית - משימות, עולמות, כספת ומתנות",
-  "start_url": "/lumina-vault.html",
+  "start_url": "./lumina-vault.html",
   "display": "standalone",
   "background_color": "#FFFEF7",
   "theme_color": "#D4AF37",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/assets/icon.png?v=5",
+      "src": "./assets/icon.png?v=5",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/assets/icon.png?v=5",
+      "src": "./assets/icon.png?v=5",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
